# weavo

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  playground.md  pnpm-lock.yaml
.cursor/plans/: builder_vs_backend_path_02964cc7.plan.md  weavo_theme_architecture_12ee1068.plan.md
.cursor/rules/: weavo-project.mdc
src/: App.jsx  server.js
src/builder/mock-schemas/: app.weave.json  components.schema.json  demo.schema-info.json  demo.schema-search.json  demo.schema.json  landing.schema.json  schema.wv  search.schema.json
src/components/: index.jsx  withWeavoLayout.jsx
src/components/layouts/: index.jsx
src/components/ui/: index.jsx
src/js/: event-handlers.js  listeners.js  listners.js
src/playground/: BuilderCanvas.jsx  BuilderProvider.jsx  ComponentPalette.jsx  DataSourcePanel.jsx  DataSourceProvider.jsx  JsonPanel.jsx  PlaygroundPage.jsx  PlaygroundToolbar.jsx  PreviewPanel.jsx  PropsPanel.jsx  index.js  schema-tree.js
src/schema-renderer/: renderer.jsx  template.js  validate-schema.js
src/schema-renderer/ai-models/: ai-wrapper.js
src/scss-core/: _variables.scss  app.scss  landing.scss  layout.scss  playground.scss  ui.scss
src/scss-core/themes/: _dark.scss  _light.scss
src/server/: weave-store.js
src/tests/: index.js  test-model-ai.js
src/theme-system/: ThemeProvider.jsx  apply-theme.js  index.js  theme-registry.js  token-keys.js
src/weave/: SchemaRenderer.jsx  WeaveProvider.jsx  fetchWeave.js  hash-routing.js  index.js  resolveWeave.js  schema-registry.js  types.js
