[package]
name = "weavo-compiler"
version = "0.1.0"
edition = "2021"
authors = mishranaman123@gmail.com
description = "Weavo parser: convert .wv <-> JSON using Rust + WebAssembly"
license = "MIT"
repository = "https://github.com/anurag810/weavo"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WebAssembly bindings
wasm-bindgen = "0.2"

# JSON serialization / deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Parsing support
regex = "1.10"
nom = "7.1"

# Optional: better error reporting in browser
console_error_panic_hook = "0.1"

# Optional: smaller wasm build
wee_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
